# wasm-rust-boilerplate

./: Cargo.toml  LICENSE_MIT  README.md
public/: package.json
src/: lib.rs
