[package]
name = "wasm-rust-boilerplate"
version = "0.1.0"
authors = ["Jayson Meribe <jaysonmeribe2004@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.82"
console_error_panic_hook = { version = "0.1.7", optional = true }
# wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.32"

[profile.release]
opt-level = "s"
lto = true